session6_assignment/log/build_2024-07-20_21-02-50/warehouse_robot/stderr.log
  File "/home/razanhmede/session6_assignment-razan/session6_assignment/install/warehouse_robot/lib/python3.10/site-packages/warehouse_robot/stock_checker_service_client.py", line 4
    from examples_interfaces.srv import 
                                        ^
SyntaxError: invalid syntax

  File "/home/razanhmede/session6_assignment-razan/session6_assignment/install/warehouse_robot/lib/python3.10/site-packages/warehouse_robot/stock_checker_service_server.py", line 3
    from example_interfaces.srv import 
                                       ^
SyntaxError: invalid syntax

